SERVER-48128 ShardServerProcessInterface should only version internal commands if the parent op is versioned