src/mongo/db/pipeline/process_interface/shardsvr_process_interface.cpp
@@ -53,6 +53,12 @@ namespace mongo {
 
 using namespace fmt::literals;
 
+ShardServerProcessInterface::ShardServerProcessInterface(
+    OperationContext* opCtx, std::shared_ptr<executor::TaskExecutor> executor)
+    : CommonMongodProcessInterface(executor) {
+    _opIsVersioned = OperationShardingState::isOperationVersioned(opCtx);
+}
+
 bool ShardServerProcessInterface::isSharded(OperationContext* opCtx, const NamespaceString& nss) {
     auto routingInfo =
         uassertStatusOK(Grid::get(opCtx)->catalogCache()->getCollectionRoutingInfo(opCtx, nss));
@@ -158,22 +164,23 @@ void ShardServerProcessInterface::renameIfOptionsAndIndexesHaveNotChanged(
     const NamespaceString& destinationNs,
     const BSONObj& originalCollectionOptions,
     const std::list<BSONObj>& originalIndexes) {
+    auto cachedDbInfo =
+        uassertStatusOK(Grid::get(opCtx)->catalogCache()->getDatabase(opCtx, destinationNs.db()));
     auto newCmdObj = CommonMongodProcessInterface::_convertRenameToInternalRename(
         opCtx, renameCommandObj, originalCollectionOptions, originalIndexes);
     BSONObjBuilder newCmdWithWriteConcernBuilder(std::move(newCmdObj));
     newCmdWithWriteConcernBuilder.append(WriteConcernOptions::kWriteConcernField,
                                          opCtx->getWriteConcern().toBSON());
     newCmdObj = newCmdWithWriteConcernBuilder.done();
-    auto cachedDbInfo =
-        uassertStatusOK(Grid::get(opCtx)->catalogCache()->getDatabase(opCtx, destinationNs.db()));
-    auto response =
-        executeCommandAgainstDatabasePrimary(opCtx,
-                                             // internalRenameIfOptionsAndIndexesMatch is adminOnly.
-                                             NamespaceString::kAdminDb,
-                                             std::move(cachedDbInfo),
-                                             newCmdObj,
-                                             ReadPreferenceSetting(ReadPreference::PrimaryOnly),
-                                             Shard::RetryPolicy::kNoRetry);
+    auto response = executeRawCommandAgainstDatabasePrimary(
+        opCtx,
+        // internalRenameIfOptionsAndIndexesMatch is adminOnly.
+        NamespaceString::kAdminDb,
+        cachedDbInfo,
+        // Only unsharded collections can be renamed.
+        _versionCommandIfAppropriate(newCmdObj, cachedDbInfo, ChunkVersion::UNSHARDED()),
+        ReadPreferenceSetting(ReadPreference::PrimaryOnly),
+        Shard::RetryPolicy::kNoRetry);
     uassertStatusOKWithContext(response.swResponse,
                                str::stream() << "failed while running command " << newCmdObj);
     auto result = response.swResponse.getValue().data;
@@ -199,7 +206,7 @@ BSONObj ShardServerProcessInterface::getCollectionOptions(OperationContext* opCt
             shard->runExhaustiveCursorCommand(opCtx,
                                               ReadPreferenceSetting(ReadPreference::PrimaryOnly),
                                               nss.db().toString(),
-                                              appendDbVersionIfPresent(cmdObj, cachedDbInfo),
+                                              _versionCommandIfAppropriate(cmdObj, cachedDbInfo),
                                               Milliseconds(-1)));
     } catch (const ExceptionFor<ErrorCodes::NamespaceNotFound>&) {
         return BSONObj{};
@@ -245,7 +252,7 @@ std::list<BSONObj> ShardServerProcessInterface::getIndexSpecs(OperationContext* 
             shard->runExhaustiveCursorCommand(opCtx,
                                               ReadPreferenceSetting(ReadPreference::PrimaryOnly),
                                               ns.db().toString(),
-                                              appendDbVersionIfPresent(cmdObj, cachedDbInfo),
+                                              _versionCommandIfAppropriate(cmdObj, cachedDbInfo),
                                               Milliseconds(-1)));
     } catch (ExceptionFor<ErrorCodes::NamespaceNotFound>&) {
         return std::list<BSONObj>();
@@ -262,13 +269,13 @@ void ShardServerProcessInterface::createCollection(OperationContext* opCtx,
     finalCmdBuilder.append(WriteConcernOptions::kWriteConcernField,
                            opCtx->getWriteConcern().toBSON());
     BSONObj finalCmdObj = finalCmdBuilder.obj();
-    auto response =
-        executeCommandAgainstDatabasePrimary(opCtx,
-                                             dbName,
-                                             std::move(cachedDbInfo),
-                                             finalCmdObj,
-                                             ReadPreferenceSetting(ReadPreference::PrimaryOnly),
-                                             Shard::RetryPolicy::kIdempotent);
+    auto response = executeRawCommandAgainstDatabasePrimary(
+        opCtx,
+        dbName,
+        cachedDbInfo,
+        _versionCommandIfAppropriate(finalCmdObj, cachedDbInfo),
+        ReadPreferenceSetting(ReadPreference::PrimaryOnly),
+        Shard::RetryPolicy::kIdempotent);
     uassertStatusOKWithContext(response.swResponse,
                                str::stream() << "failed while running command " << finalCmdObj);
     auto result = response.swResponse.getValue().data;
@@ -296,11 +303,11 @@ void ShardServerProcessInterface::createIndexesOnEmptyCollection(
         ns,
         "copying index for empty collection {}"_format(ns.ns()),
         [&] {
-            auto response = executeCommandAgainstDatabasePrimary(
+            auto response = executeRawCommandAgainstDatabasePrimary(
                 opCtx,
                 ns.db(),
-                std::move(cachedDbInfo),
-                cmdObj,
+                cachedDbInfo,
+                _versionCommandIfAppropriate(cmdObj, cachedDbInfo),
                 ReadPreferenceSetting(ReadPreference::PrimaryOnly),
                 Shard::RetryPolicy::kIdempotent);
 
@@ -326,13 +333,14 @@ void ShardServerProcessInterface::dropCollection(OperationContext* opCtx,
     newCmdBuilder.append(WriteConcernOptions::kWriteConcernField,
                          opCtx->getWriteConcern().toBSON());
     auto cmdObj = newCmdBuilder.done();
-    auto response =
-        executeCommandAgainstDatabasePrimary(opCtx,
-                                             ns.db(),
-                                             std::move(cachedDbInfo),
-                                             cmdObj,
-                                             ReadPreferenceSetting(ReadPreference::PrimaryOnly),
-                                             Shard::RetryPolicy::kIdempotent);
+    auto response = executeRawCommandAgainstDatabasePrimary(
+        opCtx,
+        ns.db(),
+        cachedDbInfo,
+        // Only unsharded collections can be dropped.
+        _versionCommandIfAppropriate(cmdObj, cachedDbInfo, ChunkVersion::UNSHARDED()),
+        ReadPreferenceSetting(ReadPreference::PrimaryOnly),
+        Shard::RetryPolicy::kIdempotent);
     uassertStatusOKWithContext(response.swResponse,
                                str::stream() << "failed while running command " << cmdObj);
     auto result = response.swResponse.getValue().data;
@@ -356,10 +364,20 @@ void ShardServerProcessInterface::setExpectedShardVersion(
     auto& oss = OperationShardingState::get(opCtx);
     if (oss.hasShardVersion(nss)) {
         invariant(oss.getShardVersion(nss) == chunkVersion);
-    } else {
-        OperationShardingState::get(opCtx).initializeClientRoutingVersions(
-            nss, chunkVersion, boost::none);
+    } else if (_opIsVersioned) {
+        oss.initializeClientRoutingVersions(nss, chunkVersion, boost::none);
     }
+}
+
+BSONObj ShardServerProcessInterface::_versionCommandIfAppropriate(
+    BSONObj cmdObj,
+    const CachedDatabaseInfo& cachedDbInfo,
+    boost::optional<ChunkVersion> shardVersion) {
+    if (!_opIsVersioned) {
+        return cmdObj;
+    }
+    return appendDbVersionIfPresent(
+        shardVersion ? appendShardVersion(cmdObj, *shardVersion) : cmdObj, cachedDbInfo);
 }
 
 }  // namespace mongo
